# cmake_tutorial

./: README.md
C/: CMakeLists.txt  TestConfig.h.in  main.cpp
C/test/: CMakeLists.txt  test.cpp  test.hpp
C_sub/: CMakeLists.txt  test2.cpp  test2.hpp
